crates/test-ui/ui/define_class_invalid_type3.stderr
error[E0277]: the trait bound `Retained<BadSelectors>: Encode` is not satisfied
 --> ui/define_class_invalid_type3.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct BadSelectors;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<BadSelectors>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<BadSelectors>` to implement `EncodeReturn`
  = note: required for `Retained<BadSelectors>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<8>>`
  = note: required for `objc2::__macros::MethodFamily<8>` to implement `objc2::__macros::RetainSemantics<&AnyClass, Retained<BadSelectors>, objc2::__macros::KindDefined>`
  = note: required for `fn() -> Retained<BadSelectors>` to implement `objc2::__macros::define_class::thunk::FnToExternFn<_::<impl ClassType for BadSelectors>::class::{closure#0}::{closure#0}::__FnMarker, objc2::__macros::MethodFamily<8>, objc2::__macros::ClassFnKind<&AnyClass>, BadSelectors>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<BadSelectors>: Encode` is not satisfied
 --> ui/define_class_invalid_type3.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct BadSelectors;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<BadSelectors>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<BadSelectors>` to implement `EncodeReturn`
  = note: required for `Retained<BadSelectors>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<9>>`
  = note: required for `objc2::__macros::MethodFamily<9>` to implement `objc2::__macros::RetainSemantics<&AnyClass, Retained<BadSelectors>, objc2::__macros::KindDefined>`
  = note: required for `fn() -> Retained<BadSelectors>` to implement `objc2::__macros::define_class::thunk::FnToExternFn<_::<impl ClassType for BadSelectors>::class::{closure#0}::{closure#0}::__FnMarker, objc2::__macros::MethodFamily<9>, objc2::__macros::ClassFnKind<&AnyClass>, BadSelectors>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<BadSelectors>: Encode` is not satisfied
 --> ui/define_class_invalid_type3.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct BadSelectors;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<BadSelectors>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<BadSelectors>` to implement `EncodeReturn`
  = note: required for `Retained<BadSelectors>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<10>>`
  = note: required for `objc2::__macros::MethodFamily<10>` to implement `objc2::__macros::RetainSemantics<&AnyClass, Retained<BadSelectors>, objc2::__macros::KindDefined>`
  = note: required for `fn() -> Retained<BadSelectors>` to implement `objc2::__macros::define_class::thunk::FnToExternFn<_::<impl ClassType for BadSelectors>::class::{closure#0}::{closure#0}::__FnMarker, objc2::__macros::MethodFamily<10>, objc2::__macros::ClassFnKind<&AnyClass>, BadSelectors>`
note: required by a bound in `objc2::__macros::ConvertDefinedFn::Func`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/thunk.rs
  |
  |     type Func: FnToExternFn<FnMarker, MethodFamily, Kind, Self>;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertDefinedFn::Func`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<BadSelectors>: EncodeReturn` is not satisfied
 --> ui/define_class_invalid_type3.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct BadSelectors;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<BadSelectors>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<BadSelectors>` to implement `EncodeReturn`
  = note: required for `Retained<BadSelectors>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<8>>`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<BadSelectors>: EncodeReturn` is not satisfied
 --> ui/define_class_invalid_type3.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct BadSelectors;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<BadSelectors>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<BadSelectors>` to implement `EncodeReturn`
  = note: required for `Retained<BadSelectors>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<9>>`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<BadSelectors>: EncodeReturn` is not satisfied
 --> ui/define_class_invalid_type3.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct BadSelectors;
... |
  | | );
  | |_^ the trait `Encode` is not implemented for `Retained<BadSelectors>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<BadSelectors>` to implement `EncodeReturn`
  = note: required for `Retained<BadSelectors>` to implement `objc2::__macros::ConvertReturn<objc2::__macros::MethodFamily<10>>`
  = note: this error originates in the macro `$crate::__declare_class_register_thunk` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)
